--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,14 @@
     <string name="save_data">Save Data</string>
     <string name="title_activity_test_recycler" translatable="false">testRecycler</string>
     <string name="list_view">List view</string>
+    <string name="oghatsharei">OghatSharei</string>
+    <string name="_Fajr">Fajr</string>
+    <string name="Namayesh_Oghat_sharei">Namayesh Oghat Sharei</string>
+    <string name="_Asr">Asr</string>
+    <string name="_Isha">Isha</string>
+    <string name="_Maghrib">Maghrib</string>
+    <string name="_Tolo">Tolo</string>
+    <string name="_Zohr">Zohr</string>
 
 
 </resources>
